--- a/sol-1.2.5_part4.html
+++ b/sol-1.2.5_part4.html
@@ -3,55 +3,45 @@
 <script src="http://3Dmol.csb.pitt.edu/build/3Dmol.js"></script>
 </head>
 <body>
-<h2>1.2.5 4. TIM (PDB 4POC) loop: Q64-I78</h2>
-1.2.5 3.1.  sticks (all atoms, gray + CPK colors as in 1.2.3)
-<div id="oneTwoFiveFourOne" style="height: 400px; width: 400px; position: relative;"></div>
-<br/>
-
-1.2.5 3.2 ribbon with side chain sticks [currently shown without hydrogens] 
-<div id="ribbonAndSticksDiv" style="height: 400px; width: 400px; position: relative;"></div>
-<br/>
-
-1.2.5 3.3 ribbon/cartoon only
-<div id="ribbonDiv" style="height: 400px; width: 400px; position: relative;"></div>
-<br/>
-
+<h2>1.2.5 part 4:  TIM (PDB 4POC) loop: Q64-I78</h2>
+<input type="submit" value="stick" onclick="swapView(this.value)"/>
+<input type="submit" value="ribbon" onclick="swapView(this.value)"/>
+<input type="submit" value="ribbon and stick" onclick="swapView(this.value)"/>
+<div id="3DMolViewerDiv" style="height: 600px; width: 600px; position: relative;"></div>
 </body>
 <script>
+var swapViewer = null;
+var pdbData = null;
+
+function swapView(viewName) {
+	console.log("swapView viewName:  " + viewName);
+
+	swapViewer.removeAllModels();
+
+	if ("ribbon" == viewName) {
+		swapViewer.addModel(pdbData, "pdb");
+		swapViewer.setStyle({}, {cartoon:{}});
+	} else if ("ribbon and stick" == viewName) {
+		swapViewer.addModel(pdbData, "pdb");
+		swapViewer.setStyle({}, {cartoon:{}, stick:{}});
+	} else if ("stick" == viewName) {
+		swapViewer.addModel(pdbData, "pdb");
+		swapViewer.setStyle({}, {stick:{}});
+	}
+	swapViewer.render();
+
+};
+
 $(document).ready(function() {
-	$.ajax({url: "4poc Q64-I78 loop.pdb", success: function(_4PocPdb) {
-		//*********************************
-		//1.2.5 4.1
-		var myviewer = $3Dmol.createViewer("oneTwoFiveFourOne");
-		myviewer.setBackgroundColor(0xffffff);
-		myviewer.addModel(_4PocPdb, "pdb");
-		myviewer.setStyle({}, {stick:{}});
-		myviewer.zoomTo();
-		//myviewer.rotate(45, "x");
-		//myviewer.rotate(30, "y");
-		myviewer.render();
+	swapViewer = $3Dmol.createViewer("3DMolViewerDiv");
+	
+	$.ajax({url: "http://www.broadinstitute.org/~dlahr/3dmol/4poc Q64-I78 loop.pdb", success: function(_4PocPdb) {
+		pdbData = _4PocPdb;
 
-		//*********************************
-		//1.2.5 3.2 ribbon and stick example
-		myviewer = $3Dmol.createViewer("ribbonAndSticksDiv");
-		myviewer.setBackgroundColor(0xffffff);
-		myviewer.addModel(_4PocPdb, "pdb", {keepH:false});
-		myviewer.setStyle({}, {stick:{},cartoon:{}});
-		myviewer.zoomTo();
-		//myviewer.rotate(45, "x");
-		//myviewer.rotate(30, "y");
-		myviewer.render();
-
-		//*********************************
-		//1.2.5 3.3 just ribbon example
-		myviewer = $3Dmol.createViewer("ribbonDiv");
-		myviewer.setBackgroundColor(0xffffff);
-		myviewer.addModel(_4PocPdb, "pdb", {keepH:false});
-		myviewer.setStyle({}, {cartoon:{}});
-		myviewer.zoomTo();
-		//myviewer.rotate(45, "x");
-		//myviewer.rotate(30, "y");
-		myviewer.render();
+		swapViewer.setBackgroundColor(0xffffff);
+		swapView("stick");
+		swapViewer.zoomTo();
+		swapViewer.render();
 	}});
 });
 </script>
