sol-1.2.5 use full url for loading data

--- a/sol-1.2.5.html
+++ b/sol-1.2.5.html
@@ -54,7 +54,7 @@ function swapView(viewName) {
 $(document).ready(function() {
 	swapViewer = $3Dmol.createViewer("3DMolViewerDiv");
 	
-	$.ajax({url: "4poc Q19-N29 alpha-helix.pdb", success: function(_4PocPdb) {
+	$.ajax({url: "http://www.broadinstitute.org/~dlahr/3dmol/4poc Q19-N29 alpha-helix.pdb", success: function(_4PocPdb) {
 		pdbData = _4PocPdb;
 
 		swapViewer.setBackgroundColor(0xffffff);
