--- a/sol-1.2.4.html
+++ b/sol-1.2.4.html
@@ -1,35 +1,58 @@
 <html>
 <head>
 <script src="http://3Dmol.csb.pitt.edu/build/3Dmol.js"></script>
+<script src="script_protein.js"></script>
 </head>
 <body>
-<h2>1.2.4 TIM (PDB 4POC) 6­mer fragment:A73-I78</h2>
-<input type="submit" value="stick" onclick="swapView(this.value)"/>
-<input type="submit" value="stick colored by amino acid" onclick="swapView(this.value)"/>
-<input type="submit" value="stick and ribbon" onclick="swapView(this.value)"/>
-<input type="submit" value="ribbon" onclick="swapView(this.value)"/>
-<input type="submit" value="spheres" onclick="swapView(this.value)"/>
-<input type="submit" value="surface" onclick="swapView(this.value)"/>
+<div class="form-group form-inline">
+<input type="submit" value="stick" onclick="swapView(this.value)" class="btn btn-xs btn-default" />
+<input type="submit" value="stick and ribbon" onclick="swapView(this.value)" class="btn btn-xs btn-default" />
+<input type="submit" value="ribbon" onclick="swapView(this.value)" class="btn btn-xs btn-default" />
+<input type="submit" value="spheres" onclick="swapView(this.value)" class="btn btn-xs btn-default" />
+<input type="submit" value="surface" onclick="swapView(this.value)" class="btn btn-xs btn-default" /><br/>
 
-<div id="3DMolViewerDiv" style="height: 600px; width: 600px; position: relative;"></div>
+Style test:
+<input type="submit" value="stick 0xcccccc" onclick="styleTest(this.value)" class="btn btn-xs btn-default" />
+<input type="submit" value="stick 0xe7e7e7" onclick="styleTest(this.value)" class="btn btn-xs btn-default" />
+<input type="submit" value="stick 0xffffff" onclick="styleTest(this.value)" class="btn btn-xs btn-default" />
+<input type="submit" value="element coloring" onclick="styleTest(this.value)" class="btn btn-xs btn-default" /><br/>
+opacity of ribbon in stick and ribbon view:  <input type="text" id="opacityInputText" value="0.8"/><br/>
 
-</body>
+get things:
+<input type="submit" value="get image" onclick="getImage()" class="btn btn-xs btn-default" />
+<input type="submit" value="get view coordinates" onclick="getViewCoordinates(swapViewer)" class="btn btn-xs btn-default" />
+<div id="viewCoordinatesDiv"></div>
+</div>
+
+<div id="3DMolViewerDiv" style="height: 600px; width: 600px; position: relative; border:solid 1px #999;"></div>
+static image snapshot:
+<div id="staticImageSnapshotDiv" style="height: 600px; width: 600px; position: relative; border:solid 1px #999;"></div>
+
 <script>
 var swapViewer = null;
 var pdbData = null;
 
-var residueColorMap = {73:"0xFF0000", 74:"0xFF6600", 75:"0xFFFF00", 76:"0x008000", 77:"0x0000FF", 78:"0x800080"};
-function colorResidues(atomStyleList) {
+console.log($tsol3d.defaultElementColors);
+
+var residueColorMap = {73:"0xe7e7e7", 74:"0xacacac", 75:"0xe7e7e7", 76:"0xacacac", 77:"0xe7e7e7", 78:"0xacacac"};
+function colorResidues(stylesAndAdditionalSpecMap) {
 	for (var curResi in residueColorMap) {
 		var curColor = residueColorMap[curResi];
 		
-		var style = {};
-		for (var i = 0; i < atomStyleList.length; i++) {
-			var atomStyle = atomStyleList[i];
-			style[atomStyle] = {color:curColor};
-		}
+		var styleMap = {};
+		for (var styleName in stylesAndAdditionalSpecMap) {
+			var styleSpec = {color:curColor};
 
-		swapViewer.setStyle({resi:curResi}, style);
+			var additionalSpecMap = stylesAndAdditionalSpecMap[styleName];
+			for (var key in additionalSpecMap) {
+				styleSpec[key] = additionalSpecMap[key];
+			}
+
+			styleMap[styleName] = styleSpec;
+		}
+		console.log("styleMap:  " + JSON.stringify(styleMap));
+
+		swapViewer.setStyle({resi:curResi}, styleMap);
 	}
 }
 
@@ -44,33 +67,71 @@ function swapView(viewName) {
 	swapViewer.addResLabels({}, {font:"Helvetica", fontSize:18, fontColor:"black", showBackground:false});
 
 	if ("ribbon" == viewName) {
-		colorResidues(["cartoon"]);
+		colorResidues({"cartoon":{}});
 	} else if ("stick" == viewName) {
-		swapViewer.setStyle({}, {stick:{}});
-	} else if ("stick colored by amino acid" == viewName) {
-		colorResidues(["stick"]);
+		colorResidues({"stick":{}});
+		swapViewer.setStyle({elem:"C",invert:true}, {stick:$tsol3d.defaultStickStyle});
 	} else if ("stick and ribbon" == viewName) {
-		colorResidues(["stick", "cartoon"]);
+		var inputOpacity = $("#opacityInputText").val();
+		var curCartoonStyle = {"opacity":inputOpacity};
+//		var curCartoonStyle = $.extend({}, $tsol3d.defaultCartoonStyle);
+//		curCartoonStyle["opacity"] = inputOpacity;
+
+		colorResidues({stick:{}, cartoon:curCartoonStyle});
+//		swapViewer.addStyle({elem:"C",invert:true}, {stick:$tsol3d.defaultStickStyle, cartoon:{opacity:inputOpacity}});
 	} else if ("spheres" == viewName) {
-		swapViewer.setStyle({}, {sphere:{}});
+		swapViewer.setStyle({}, {sphere:{colorscheme:$tsol3d.defaultElementColors}});
 	} else if ("surface" == viewName) {
-		swapViewer.setStyle({}, {stick:{}});
+		swapViewer.setStyle({}, {stick:$tsol3d.defaultStickStyle});
 		swapViewer.addSurface("VDW", {opacity:0.7, color:"white"}, {});
 	}
 	swapViewer.render();
 };
 
+function styleTest(styleTestName) {
+    split = styleTestName.split(" ");
+
+    if (split[0] == "stick") {
+        swapView("stick");
+        swapViewer.setStyle({elem:["C"]}, {stick:{color:split[1]}});
+        swapViewer.render();
+    }
+
+    if (split[0] == "element") {
+        swapView("stick");  
+
+        //NB:  in production whatever colors we settle on we can set use defaultColor when creating viewer - just
+        //doing it this way here b/c I don't want to re-create the viewer
+        swapViewer.setStyle({elem:["N"]}, {stick:{color:"0x0070ff"}});
+        swapViewer.setStyle({elem:["S"]}, {stick:{color:"0xffb900"}});
+        swapViewer.setStyle({elem:["O"]}, {stick:{color:"0xdf0000"}});
+        swapViewer.render();
+    };
+};
+
+function getImage() {
+    var canvas = $("canvas").get(1);
+    var img = canvas.toDataURL("image/png");
+    $("#staticImageSnapshotDiv").html("<img src='" + img + "' style='width: 600px;height: 600px;'/>");
+};
+
+function getViewCoordinates(viewer) {
+    $("#viewCoordinatesDiv").html(JSON.stringify(viewer.getView()));
+};
+
 $(document).ready(function() {
 	swapViewer = $3Dmol.createViewer("3DMolViewerDiv");
 	
-	$.ajax({url: "http://www.broadinstitute.org/~dlahr/3dmol/4poc_A73-I78_mixed_case.pdb", success: function(_4PocPdb) {
+	$.ajax({url: "4poc_A73-I78_mixed_case.pdb", success: function(_4PocPdb) {
 		pdbData = _4PocPdb;
 
 		swapViewer.setBackgroundColor(0xffffff);
 		swapView("stick");
 		swapViewer.zoomTo();
+                swapViewer.zoom(0.95);
 		swapViewer.render();
 	}});
 });
 </script>
+</body>
 </html>
