--- a/sol-1.2.3.html
+++ b/sol-1.2.3.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="http://3Dmol.csb.pitt.edu/build/3Dmol.js"></script>
+<script src="https://3Dmol.csb.pitt.edu/build/3Dmol.js"></script>
 </head>
 <body>
 <div id="tableDiv" style="height: 400px; width: 400px; position: relative;"></div>
