--- a/sol-1.2.4.html
+++ b/sol-1.2.4.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="http://3Dmol.csb.pitt.edu/build/3Dmol.js"></script>
+<script src="https://3Dmol.csb.pitt.edu/build/3Dmol.js"></script>
 <script src="script_protein.js"></script>
 </head>
 <body>
