--- a/sol-1.2.5_part3.html
+++ b/sol-1.2.5_part3.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="http://3Dmol.csb.pitt.edu/build/3Dmol.js"></script>
+<script src="https://3Dmol.csb.pitt.edu/build/3Dmol.js"></script>
 </head>
 <body>
 <h2>1.2.5 part 3:  TIM (PDB 4POC) parallel beta-sheet: F6-A42</h2>
@@ -54,7 +54,7 @@ function swapView(viewName) {
 $(document).ready(function() {
 	swapViewer = $3Dmol.createViewer("3DMolViewerDiv");
 	
-	$.ajax({url: "http://www.broadinstitute.org/~dlahr/3dmol/4poc F6-A42 parallel beta-sheet.pdb", success: function(_4PocPdb) {
+	$.ajax({url: "https://www.broadinstitute.org/~dlahr/tsol_3dmol/4poc F6-A42 parallel beta-sheet.pdb", success: function(_4PocPdb) {
 		pdbData = _4PocPdb;
 
 		swapViewer.setBackgroundColor(0xffffff);
