sol-1.3.5.html update to fix default color

--- a/sol-1.3.5.html
+++ b/sol-1.3.5.html
@@ -12,7 +12,7 @@
 
 surface parameters<br/>
 opacity:  <input type="text" id="surfaceOpacityInput" value="0.6"/>  
-color:  <input type="text" id="surfaceColorInput" value="#3090C7"/>  
+color:  <input type="text" id="surfaceColorInput" value="0x3090C7"/>  
 <input type="submit" value="redraw surface" onclick="redrawSurface()"/><br/>
 
 <div id="3DMolViewerDiv" style="height: 600px; width: 600px; position: relative;"></div>
