--- a/sol-1.2.6_scripted.html
+++ b/sol-1.2.6_scripted.html
@@ -73,7 +73,7 @@ function swapView(viewName) {
 $(document).ready(function() {
 	swapViewer = $3Dmol.createViewer("3DMolViewerDiv");
 	
-	$.ajax({url: "https://www.broadinstitute.org/~dlahr/tsol_3dmol/4poc chain A monomer.pdb", success: function(_4PocPdb) {
+	$.ajax({url: "4poc chain A monomer.pdb", success: function(_4PocPdb) {
 		pdbData = _4PocPdb;
 
 		swapViewer.setBackgroundColor(0xffffff);
