--- a/sol-1.2.7.html
+++ b/sol-1.2.7.html
@@ -82,7 +82,7 @@ function swapView(viewName) {
 $(document).ready(function() {
 	swapViewer = $3Dmol.createViewer("3DMolViewerDiv");
 	
-	$.ajax({url: "https://www.broadinstitute.org/~dlahr/tsol_3dmol/4poc.pdb", success: function(_4PocPdb) {
+	$.ajax({url: "4poc.pdb", success: function(_4PocPdb) {
 		pdbData = _4PocPdb;
 
 		swapViewer.setBackgroundColor(0xffffff);
