add header with name to test_TIM_6mer_fragment_A73_I78

--- a/test_TIM_6mer_fragment_A73_I78.html
+++ b/test_TIM_6mer_fragment_A73_I78.html
@@ -5,6 +5,7 @@
 <script src="script_protein.js"></script>
 </head>
 <body>
+<h2>TIM_fragment_alpha_helix_Q19_N29</h2>
 <div id="viewerButtonsDiv"></div>
 <div id="viewerDiv" style="height: 600px; width: 600px; position: relative;"></div>
 <div id="viewerAdminDiv"></div>
