--- a/tests/test_TIM_6mer_fragment_A73_I78.html
+++ b/tests/test_TIM_6mer_fragment_A73_I78.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<script src="3Dmol.js"></script>
-<script src="log4javascript.js"></script>
-<script src="script_protein.js"></script>
+<script src="../lib/3Dmol.js"></script>
+<script src="../lib/log4javascript.js"></script>
+<script src="../build/assembledTsol3d.js"></script>
 </head>
 <body>
 <h2>TIM_6mer_fragment_A73_I78</h2>
@@ -11,7 +11,8 @@
 <div id="viewerAdminDiv"></div>
 <script>
 	$(document).ready(function() {
-		$tsol3d.TIM_6mer_fragment_A73_I78.build("viewerDiv", "viewerButtonsDiv", "viewerAdminDiv", "4poc_A73-I78_mixed_case.pdb");
+		console.log($tsol3d);
+		$tsol3d.export_tim6merFragmentA73I78.build("viewerDiv", "viewerButtonsDiv", "viewerAdminDiv", "../data/4poc_A73-I78_mixed_case.pdb");
 	});
 </script>
 </body>
