--- a/tests/test_1NF0_active_site_loop_movement.html
+++ b/tests/test_1NF0_active_site_loop_movement.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<script src="3Dmol.js"></script>
-<script src="log4javascript.js"></script>
-<script src="script_protein.js"></script>
+<script src="../lib/3Dmol.js"></script>
+<script src="../lib/log4javascript.js"></script>
+<script src="../build/assembledTsol3d.js"></script>
 </head>
 <body>
 <h2>_1NF0_active_site_loop_movement</h2>
@@ -11,7 +11,8 @@
 <div id="viewerAdminDiv"></div>
 <script>
 	$(document).ready(function() {
-		$tsol3d._1NF0_active_site_loop_movement.build("viewerDiv", "viewerButtonsDiv", "viewerAdminDiv", "1nf0_cleanedHETATM_justChainA.pdb");
+		$tsol3d.export__1nf0ActiveSiteLoopMovement.build("viewerDiv", "viewerButtonsDiv", "viewerAdminDiv",
+			"../data/1nf0_cleanedHETATM_justChainA.pdb");
 	});
 </script>
 </body>
