--- a/tests/test_TIM_fragment_alpha_helix_Q19_N29.html
+++ b/tests/test_TIM_fragment_alpha_helix_Q19_N29.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<script src="3Dmol.js"></script>
-<script src="log4javascript.js"></script>
-<script src="script_protein.js"></script>
+<script src="../lib/3Dmol.js"></script>
+<script src="../lib/log4javascript.js"></script>
+<script src="../build/assembledTsol3d.js"></script>
 </head>
 <body>
 <h2>TIM_fragment_alpha_helix_Q19_N29</h2>
@@ -11,7 +11,7 @@
 <div id="viewerAdminDiv"></div>
 <script>
 	$(document).ready(function() {
-		$tsol3d.TIM_fragment_alpha_helix_Q19_N29.build("viewerDiv", "viewerButtonsDiv", "viewerAdminDiv", "4poc Q19-N29 alpha-helix.pdb");
+		$tsol3d.export_timFragmentAlphaHelixQ19N29.build("viewerDiv", "viewerButtonsDiv", "viewerAdminDiv", "../data/4poc Q19-N29 alpha-helix.pdb");
 	});
 </script>
 </body>
