--- a/tests/test_TIM_tertiary_structure_monomer.html
+++ b/tests/test_TIM_tertiary_structure_monomer.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<script src="3Dmol.js"></script>
-<script src="log4javascript.js"></script>
-<script src="script_protein.js"></script>
+<script src="../lib/3Dmol.js"></script>
+<script src="../lib/log4javascript.js"></script>
+<script src="../build/assembledTsol3d.js"></script>
 </head>
 <body>
 <h2>TIM_tertiary_structure_monomer</h2>
@@ -11,7 +11,8 @@
 <div id="viewerAdminDiv"></div>
 <script>
 	$(document).ready(function() {
-		$tsol3d.TIM_tertiary_structure_monomer.build("viewerDiv", "viewerButtonsDiv", "viewerAdminDiv", "4poc chain A monomer mixed case.pdb");
+		$tsol3d.export_tertiaryStructureMonomer.build("viewerDiv", "viewerButtonsDiv", "viewerAdminDiv",
+			"../data/4poc chain A monomer mixed case.pdb");
 	});
 </script>
 </body>
