--- a/tests/test_linewdith.html
+++ b/tests/test_linewdith.html
@@ -1,14 +1,10 @@
 <html>
 <head>
 <script src="../lib/3Dmol.js"></script>
-<script src="../lib/log4javascript.js"></script>
-<script src="../build/assembledTsol3d.js"></script>
 </head>
 <body>
 <h2>test linewidth</h2>
-<div id="viewerButtonsDiv"></div>
 <div id="viewerDiv" style="height: 600px; width: 600px; position: relative;"></div>
-<div id="viewerAdminDiv"></div>
 <script>
     $(document).ready(function() {
         var swapViewer = $3Dmol.createViewer('viewerDiv');
@@ -21,7 +17,9 @@
             start:{x:0, y:0, z:0},
             end:{x:100, y:100, z:100}
         });
-        swapViewer.render()
+        swapViewer.setBackgroundColor(0xffffff);
+
+        swapViewer.render();
     });
 </script>
 </body>
