tests/test_TIM_fragment_alpha_helix_Q19_N29.html: fix line wrap

--- a/tests/test_TIM_fragment_alpha_helix_Q19_N29.html
+++ b/tests/test_TIM_fragment_alpha_helix_Q19_N29.html
@@ -11,7 +11,8 @@
 <div id="viewerAdminDiv"></div>
 <script>
 	$(document).ready(function() {
-		$tsol3d.export_timFragmentAlphaHelixQ19N29.build("viewerDiv", "viewerButtonsDiv", "viewerAdminDiv", "../data/4poc Q19-N29 alpha-helix.pdb");
+		$tsol3d.export_timFragmentAlphaHelixQ19N29.build("viewerDiv", "viewerButtonsDiv",
+			"viewerAdminDiv", "../data/4poc Q19-N29 alpha-helix.pdb");
 	});
 </script>
 </body>
